# vm-recon

./: .dockerignore  .env  .env_project  .env_template  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  installer.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests-start.sh
.github/workflows/: docker-build.yml  python-dev.yml
app/: main.py
app/commands/: hack.py  infra.py  tools.py  wifi.py
app/service/: hack_service.py  tool_service.py  wifi_service.py
app/tests/: test_default.py
app/utils/: config.py  defaultLogBanner.py  locater.py  logHelper.py  utils.py  utilsFolderHelper.py  utilsHelper.py  utilsProcessHelper.py  utilsProgressHelper.py  utilsWifi.py
scripts/: format-imports.sh  format.sh  lint.sh  setup-dev.sh  setup.sh  test-cov-html.sh  vm_recon_path.sh
vm_recon/: cli.py  config.py
vm_recon/commands/: hack.py  infra.py  tools.py  wifi.py
vm_recon/service/: forensic_service.py  hack_service.py  tool_service.py  wifi_service.py
vm_recon/utilities/: utils.py
