[options.extras_require]
testing =
pytest >=6.0
pytest-cov >=2.0
mypy >=0.910
flake8 >=3.9
tox >=3.24

[options.package_data]
slapping = py.typed

[flake8]
# max-line-length = 160
max-line-length = 127
max-complexity = 10
exclude = build,dist,docs/conf.py,organice/migrations,*.egg-info

[aliases]
test=pytest

[pylint]
# Run with: python3 -m pylint --rcfile=setup.cfg `find -regextype egrep -regex '(.*.py)$'`
fail-under=10
max-line-length=127
disable = C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests
